--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VEX Path Planner - Pro Editor v19 (Robot Sim)</title>
+    <title>VEX Path Planner - Pro Editor v25 (Fixed Button Height)</title>
     <style>
       /* GENEL SAYFA DÜZENİ */
       body {
@@ -78,26 +78,25 @@
         background-color: #0056b3;
       }
 
-      /* SOL ROBOT MENÜSÜ (YENİ) */
+      /* ROBOT SİMÜLASYON MENÜSÜ */
       .left-sidebar {
-        position: absolute;
-        top: 70px; /* Dosya menüsünün altı */
-        left: 15px;
         width: 180px;
+        height: 600px;
         background-color: #252526;
         border: 1px solid #3e3e42;
         border-radius: 8px;
         padding: 10px;
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        z-index: 90;
+        gap: 15px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        box-sizing: border-box;
+        flex-shrink: 0;
       }
       .left-sidebar h3 {
-        margin: 0 0 5px 0;
-        font-size: 0.9rem;
-        color: #d63384; /* Ayırt edici renk */
+        margin: 0;
+        font-size: 1rem;
+        color: #d63384;
         border-bottom: 1px solid #444;
         padding-bottom: 5px;
         text-align: center;
@@ -107,10 +106,41 @@
         background: #444;
         border: 1px solid #555;
         color: #fff;
-        padding: 4px;
+        padding: 6px;
         border-radius: 4px;
         text-align: center;
         box-sizing: border-box;
+      }
+
+      /* PLAY BUTONU (DÜZELTİLDİ: Flex etkisinden kurtarıldı) */
+      .play-btn {
+        background-color: #28a745;
+        color: white;
+
+        /* ÖNEMLİ: Genel buton stilindeki flex:1'i iptal ediyoruz */
+        flex: none !important;
+        height: 32px; /* Sabit küçük yükseklik */
+
+        padding: 0 10px;
+        font-size: 0.8rem;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: bold;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+      }
+      .play-btn:hover {
+        background-color: #218838;
+      }
+      .play-btn.playing {
+        background-color: #dc3545;
+      }
+      .play-btn.playing:hover {
+        background-color: #c82333;
       }
 
       /* ÜST KONTROL BAR */
@@ -152,8 +182,9 @@
         align-items: center;
         gap: 8px;
         background: #383838;
-        padding: 4px 12px;
+        padding: 6px 12px;
         border-radius: 20px;
+        justify-content: space-between;
       }
       .switch {
         position: relative;
@@ -236,6 +267,7 @@
         height: 600px;
         box-sizing: border-box;
         overflow-y: auto;
+        flex-shrink: 0;
       }
       .settings-panel h3 {
         margin: 0;
@@ -392,6 +424,7 @@
         gap: 8px;
         height: 600px;
         box-sizing: border-box;
+        flex-shrink: 0;
       }
       .tools-menu {
         background: #333;
@@ -473,46 +506,7 @@
       />
     </div>
 
-    <div class="left-sidebar">
-      <h3>Robot Görünümü</h3>
-      <div class="setting-group">
-        <label>Genişlik (inç):</label>
-        <input
-          type="number"
-          id="simWidthInput"
-          value="15"
-          onchange="drawScreen()"
-        />
-      </div>
-      <div class="setting-group">
-        <label>Yükseklik (inç):</label>
-        <input
-          type="number"
-          id="simHeightInput"
-          value="15"
-          onchange="drawScreen()"
-        />
-      </div>
-      <div class="switch-container" style="justify-content: center">
-        <span>Göster:</span>
-        <label class="switch">
-          <input type="checkbox" id="simToggle" onchange="drawScreen()" />
-          <span class="slider pink"></span>
-        </label>
-      </div>
-      <div
-        style="
-          font-size: 0.7rem;
-          color: #888;
-          text-align: center;
-          margin-top: 5px;
-        "
-      >
-        Yol üzerindeki kutuyu sürükleyebilirsiniz.
-      </div>
-    </div>
-
-    <h1>VEX Path Planner - Pro Editor v19</h1>
+    <h1>VEX Path Planner - Pro Editor v25</h1>
 
     <div class="top-controls">
       <div class="switch-container">
@@ -561,6 +555,42 @@
     </div>
 
     <div class="main-layout">
+      <div class="left-sidebar">
+        <h3>Robot Ayarları</h3>
+
+        <div class="setting-group">
+          <label>Genişlik (inç):</label>
+          <input
+            type="number"
+            id="simWidthInput"
+            value="15"
+            onchange="drawScreen()"
+          />
+        </div>
+
+        <div class="setting-group">
+          <label>Yükseklik (inç):</label>
+          <input
+            type="number"
+            id="simHeightInput"
+            value="15"
+            onchange="drawScreen()"
+          />
+        </div>
+
+        <div class="switch-container">
+          <span>Görünürlük:</span>
+          <label class="switch">
+            <input type="checkbox" id="simToggle" onchange="drawScreen()" />
+            <span class="slider pink"></span>
+          </label>
+        </div>
+
+        <button class="play-btn" id="playBtn" onclick="toggleAnimation()">
+          ▶ Oynat
+        </button>
+      </div>
+
       <div class="canvas-wrapper">
         <canvas id="fieldCanvas" width="600" height="600"></canvas>
       </div>
@@ -757,8 +787,12 @@
       const simWidthInput = document.getElementById("simWidthInput");
       const simHeightInput = document.getElementById("simHeightInput");
       const simToggle = document.getElementById("simToggle");
-      let currentSimIndex = 0; // Robotun yol üzerindeki indexi
-      let isSimDragging = false; // Robot kutusu sürükleniyor mu?
+      const playBtn = document.getElementById("playBtn");
+
+      let currentSimIndex = 0;
+      let isSimDragging = false;
+      let isPlaying = false;
+      let animationFrameId = null;
 
       const pointNameInput = document.getElementById("pointNameInput");
       const pointSpeedInput = document.getElementById("pointSpeedInput");
@@ -787,6 +821,59 @@
         drawScreen();
       };
 
+      // --- ANIMASYON MANTIĞI (GÜNCELLENDİ: Hız Skalası Düşürüldü) ---
+      function toggleAnimation() {
+        if (!simToggle.checked) {
+          alert("Lütfen önce Robot Görünümünü (Göster) açın.");
+          return;
+        }
+        if (processedPoints.length < 2) return;
+
+        isPlaying = !isPlaying;
+        if (isPlaying) {
+          playBtn.innerHTML = "⏹ Durdur";
+          playBtn.classList.add("playing");
+          // Eğer sonda ise başa al
+          let path = getVisualPathPoints();
+          if (currentSimIndex >= path.length - 1) {
+            currentSimIndex = 0;
+          }
+          animate();
+        } else {
+          playBtn.innerHTML = "▶ Oynat";
+          playBtn.classList.remove("playing");
+          cancelAnimationFrame(animationFrameId);
+        }
+      }
+
+      function animate() {
+        if (!isPlaying) return;
+
+        let path = getVisualPathPoints();
+        if (currentSimIndex < path.length - 1) {
+          let currentSpeed = 127;
+          if (path[Math.floor(currentSimIndex)].speed)
+            currentSpeed = parseInt(path[Math.floor(currentSimIndex)].speed);
+
+          // HIZ AYARI: 127'yi 25'e scale ediyoruz (Yavaşlatma)
+          // Oran: 25 / 127
+          let scaledSpeed = currentSpeed * (25 / 127);
+
+          // Adım büyüklüğü (Düşük hızlar için minimum 0.05 verdim ki durmasın)
+          let step = Math.max(0.05, scaledSpeed / 40);
+
+          currentSimIndex += step;
+          if (currentSimIndex >= path.length - 1) {
+            currentSimIndex = path.length - 1;
+            isPlaying = false;
+            playBtn.innerHTML = "▶ Oynat";
+            playBtn.classList.remove("playing");
+          }
+          drawScreen();
+          animationFrameId = requestAnimationFrame(animate);
+        }
+      }
+
       // --- KNOB EVENTLERİ ---
       knobHandle.addEventListener("mousedown", (e) => {
         isKnobDragging = true;
@@ -796,7 +883,7 @@
 
       document.addEventListener("mouseup", () => {
         isKnobDragging = false;
-        isSimDragging = false; // Simülasyon sürüklemeyi de bitir
+        isSimDragging = false;
       });
 
       document.addEventListener("mousemove", (e) => {
@@ -830,7 +917,7 @@
       function savePath() {
         let listToSave = isPointMode || isDrawing ? rawPoints : processedPoints;
         const data = {
-          version: "v19",
+          version: "v25",
           points: listToSave,
           settings: {
             isPointMode: isPointMode,
@@ -940,25 +1027,21 @@
         const mx = e.clientX - rect.left;
         const my = e.clientY - rect.top;
 
-        // ÖNCE SİMÜLASYON ROBOTUNU KONTROL ET
         if (simToggle.checked && processedPoints.length > 1) {
-          // Görsel yolu al
           let visualPath = getVisualPathPoints();
-          if (currentSimIndex < visualPath.length) {
-            let p = visualPath[currentSimIndex];
-            // Robotun o anki konumu p.x, p.y.
-            // Basitçe fare yakın mı diye bakalım (örneğin 30px yarıçap)
+          let idx = Math.floor(currentSimIndex);
+          if (idx < visualPath.length) {
+            let p = visualPath[idx];
             let dist = Math.hypot(p.x - mx, p.y - my);
             if (dist < 40) {
-              // Tıklama alanı
               isSimDragging = true;
-              // Olayı burada tüket, nokta seçimine gitme
+              // Oynatılıyorsa durdur
+              if (isPlaying) toggleAnimation();
               return;
             }
           }
         }
 
-        // NOKTA SEÇİM MANTIĞI
         let targetList = isPointMode || isDrawing ? rawPoints : processedPoints;
         let clickedIndex = -1;
         for (let i = targetList.length - 1; i >= 0; i--) {
@@ -1005,14 +1088,11 @@
         const mx = e.clientX - rect.left;
         const my = e.clientY - rect.top;
 
-        // SİMÜLASYON SÜRÜKLEME
         if (isSimDragging && simToggle.checked) {
           let visualPath = getVisualPathPoints();
           let minDist = Infinity;
           let closestIndex = 0;
 
-          // Mouse'a en yakın yol noktasını bul (Basit lineer arama)
-          // Performans için adım atlanabilir ama 200-300 nokta için sorun olmaz
           for (let i = 0; i < visualPath.length; i++) {
             let d = Math.hypot(visualPath[i].x - mx, visualPath[i].y - my);
             if (d < minDist) {
@@ -1022,10 +1102,9 @@
           }
           currentSimIndex = closestIndex;
           drawScreen();
-          return; // Nokta taşımayı engelle
+          return;
         }
 
-        // NOKTA TAŞIMA
         if (isDragging && selectedPointIndex !== -1) {
           let targetList =
             isPointMode || isDrawing ? rawPoints : processedPoints;
@@ -1324,13 +1403,16 @@
               let p1 = rawPoints[index];
               let p2 = rawPoints[index + 1];
 
+              let segSpeed = p2.speed || defaultSpeed;
+              let segDir = p2.dir || "fwd";
+
               newPoints.push({
                 x: p1.x + (p2.x - p1.x) * fraction,
                 y: p1.y + (p2.y - p1.y) * fraction,
                 customHeading: null,
                 name: "",
-                speed: defaultSpeed,
-                dir: "fwd",
+                speed: segSpeed,
+                dir: segDir,
               });
             }
             let lastP = rawPoints[rawPoints.length - 1];
@@ -1380,6 +1462,9 @@
           let m0 = tangents[i];
           let m1 = tangents[i + 1];
 
+          let segSpeed = p1.speed || "127";
+          let segDir = p1.dir || "fwd";
+
           for (let t = 0; t <= segments; t++) {
             let s = t / segments;
             let s2 = s * s;
@@ -1390,36 +1475,48 @@
             let h4 = s3 - s2;
             let x = h1 * p0.x + h2 * m0.x + h3 * p1.x + h4 * m1.x;
             let y = h1 * p0.y + h2 * m0.y + h3 * p1.y + h4 * m1.y;
-            splinePoints.push({ x: x, y: y });
+
+            splinePoints.push({
+              x: x,
+              y: y,
+              speed: segSpeed,
+              dir: segDir,
+            });
           }
         }
         return splinePoints;
       }
 
-      // Yardımcı fonksiyon: Çizilen (Eğri veya Düz) yolun tüm noktalarını döndür
       function getVisualPathPoints() {
         if (processedPoints.length < 2) return [];
+
         if (curveToggle.checked) {
-          return getHermiteSplinePoints(processedPoints, 20);
+          return getHermiteSplinePoints(processedPoints, 40);
         } else {
-          // Düz çizgiler için ara noktaları oluşturmasak da olur,
-          // ama simülasyonun akıcı olması için lineer interpolasyon yapmak iyi olur.
-          // Şimdilik sadece ana noktaları döndürüyoruz, robot "ışınlanır" gibi gidebilir
-          // bu yüzden basit bir interpolasyon ekleyelim.
           let pts = [];
-          // Her nokta arasına 10 tane ekle
           for (let i = 0; i < processedPoints.length - 1; i++) {
             let p1 = processedPoints[i];
             let p2 = processedPoints[i + 1];
-            for (let t = 0; t < 1; t += 0.05) {
-              // 20 adım
+
+            let segSpeed = p2.speed || "127";
+            let segDir = p2.dir || "fwd";
+
+            for (let t = 0; t < 1; t += 0.02) {
               pts.push({
                 x: p1.x + (p2.x - p1.x) * t,
                 y: p1.y + (p2.y - p1.y) * t,
+                speed: segSpeed,
+                dir: segDir,
               });
             }
           }
-          pts.push(processedPoints[processedPoints.length - 1]);
+          let last = processedPoints[processedPoints.length - 1];
+          pts.push({
+            x: last.x,
+            y: last.y,
+            speed: last.speed,
+            dir: last.dir,
+          });
           return pts;
         }
       }
@@ -1442,7 +1539,6 @@
           let visualPoints = processedPoints;
           let useCurveColor = false;
 
-          // Eğri veya Düz Yol Hesabı
           if (curveToggle.checked && processedPoints.length > 1) {
             visualPoints = getHermiteSplinePoints(processedPoints, 20);
             useCurveColor = true;
@@ -1452,7 +1548,6 @@
             if (processedPoints.length > 1)
               drawRawPath(visualPoints, useCurveColor);
 
-            // Noktaları Çiz
             for (let i = 0; i < processedPoints.length; i++) {
               let visAngle = 0;
               if (processedPoints[i].customHeading !== null) {
@@ -1479,7 +1574,6 @@
             }
           }
 
-          // ROBOT SİMÜLASYONUNU ÇİZ
           if (simToggle.checked && processedPoints.length > 1) {
             drawRobotSimulation(visualPoints, useCurveColor);
           }
@@ -1487,53 +1581,52 @@
       }
 
       function drawRobotSimulation(visualPoints, isCurved) {
-        // Eğer görsel nokta dizimiz varsa
-        // visualPoints, drawRawPath'e giden noktalarla aynı olmalı.
-        // Ancak drawScreen içinde local tanımlı.
-        // En garantisi getVisualPathPoints kullanmak.
         let simPath = getVisualPathPoints();
         if (simPath.length < 2) return;
 
-        // Index bounds check
-        if (currentSimIndex >= simPath.length)
-          currentSimIndex = simPath.length - 1;
-        if (currentSimIndex < 0) currentSimIndex = 0;
+        let idx = Math.floor(currentSimIndex);
+        if (idx >= simPath.length) idx = simPath.length - 1;
 
-        let p = simPath[currentSimIndex];
+        let p = simPath[idx];
 
-        // Robot Açısını Hesapla
-        // Bir sonraki noktaya bakarak
         let angle = 0;
-        if (currentSimIndex < simPath.length - 1) {
-          angle = calculateRawHeading(p, simPath[currentSimIndex + 1]);
-        } else if (currentSimIndex > 0) {
-          // Son noktadaysak bir öncekine bak
-          angle = calculateRawHeading(simPath[currentSimIndex - 1], p);
+        if (idx < simPath.length - 1) {
+          angle = calculateRawHeading(p, simPath[idx + 1]);
+        } else if (idx > 0) {
+          angle = calculateRawHeading(simPath[idx - 1], p);
         }
 
-        // İnç -> Piksel
+        if (p.dir === "rev") {
+          angle += 180;
+        }
+
         let w = parseFloat(simWidthInput.value) * PIXELS_PER_INCH;
         let h = parseFloat(simHeightInput.value) * PIXELS_PER_INCH;
 
-        // Çizim
         ctx.save();
         ctx.translate(p.x, p.y);
         ctx.rotate((angle * Math.PI) / 180);
 
-        ctx.fillStyle = "rgba(214, 51, 132, 0.3)"; // Saydam pembe
+        ctx.fillStyle = "rgba(214, 51, 132, 0.4)";
         ctx.strokeStyle = "#d63384";
         ctx.lineWidth = 2;
 
-        // Merkezden çiz
         ctx.fillRect(-w / 2, -h / 2, w, h);
         ctx.strokeRect(-w / 2, -h / 2, w, h);
 
-        // Ön tarafı belirtmek için küçük bir çizgi
         ctx.beginPath();
         ctx.moveTo(0, 0);
         ctx.lineTo(w / 2, 0);
         ctx.strokeStyle = "white";
+        ctx.lineWidth = 3;
         ctx.stroke();
+
+        ctx.beginPath();
+        ctx.lineTo(w / 2, 0);
+        ctx.lineTo(w / 2 - 5, -5);
+        ctx.lineTo(w / 2 - 5, 5);
+        ctx.fillStyle = "white";
+        ctx.fill();
 
         ctx.restore();
       }
