--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VEX Path Planner - Pro Editor v25 (Fixed Button Height)</title>
+    <title>VEX Path Planner - Pro Editor v27 (Smart Slider)</title>
     <style>
       /* GENEL SAYFA DÜZENİ */
       body {
@@ -13,16 +13,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 10px;
+        padding: 0;
         margin: 0;
         height: 100vh;
+        width: 100vw;
         overflow: hidden;
       }
 
       h1 {
         color: #fff;
-        margin: 5px 0 10px 0;
+        margin: 10px 0 5px 0;
         font-size: 1.4rem;
+        flex-shrink: 0;
       }
 
       /* DOSYA MENÜSÜ */
@@ -81,7 +83,7 @@
       /* ROBOT SİMÜLASYON MENÜSÜ */
       .left-sidebar {
         width: 180px;
-        height: 600px;
+        height: 100%;
         background-color: #252526;
         border: 1px solid #3e3e42;
         border-radius: 8px;
@@ -92,6 +94,7 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         box-sizing: border-box;
         flex-shrink: 0;
+        overflow-y: auto;
       }
       .left-sidebar h3 {
         margin: 0;
@@ -112,15 +115,12 @@
         box-sizing: border-box;
       }
 
-      /* PLAY BUTONU (DÜZELTİLDİ: Flex etkisinden kurtarıldı) */
+      /* PLAY BUTONU */
       .play-btn {
         background-color: #28a745;
         color: white;
-
-        /* ÖNEMLİ: Genel buton stilindeki flex:1'i iptal ediyoruz */
         flex: none !important;
-        height: 32px; /* Sabit küçük yükseklik */
-
+        height: 32px;
         padding: 0 10px;
         font-size: 0.8rem;
         border: none;
@@ -128,6 +128,7 @@
         cursor: pointer;
         font-weight: bold;
         width: 100%;
+        margin-top: auto;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -154,6 +155,7 @@
         gap: 15px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         z-index: 10;
+        flex-shrink: 0;
       }
 
       .top-controls label {
@@ -237,8 +239,11 @@
         display: flex;
         gap: 15px;
         justify-content: center;
-        align-items: flex-start;
-        height: calc(100vh - 80px);
+        align-items: center;
+        height: calc(100vh - 120px);
+        width: 98%;
+        padding-bottom: 10px;
+        box-sizing: border-box;
       }
 
       .canvas-wrapper {
@@ -248,6 +253,7 @@
         height: 600px;
         flex-shrink: 0;
         cursor: crosshair;
+        margin: auto 0;
       }
       canvas {
         position: absolute;
@@ -264,7 +270,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        height: 600px;
+        height: 100%;
         box-sizing: border-box;
         overflow-y: auto;
         flex-shrink: 0;
@@ -422,7 +428,7 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
-        height: 600px;
+        height: 100%;
         box-sizing: border-box;
         flex-shrink: 0;
       }
@@ -506,7 +512,7 @@
       />
     </div>
 
-    <h1>VEX Path Planner - Pro Editor v25</h1>
+    <h1>VEX Path Planner - Pro Editor v27</h1>
 
     <div class="top-controls">
       <div class="switch-container">
@@ -821,7 +827,7 @@
         drawScreen();
       };
 
-      // --- ANIMASYON MANTIĞI (GÜNCELLENDİ: Hız Skalası Düşürüldü) ---
+      // --- ANIMASYON MANTIĞI ---
       function toggleAnimation() {
         if (!simToggle.checked) {
           alert("Lütfen önce Robot Görünümünü (Göster) açın.");
@@ -855,11 +861,7 @@
           if (path[Math.floor(currentSimIndex)].speed)
             currentSpeed = parseInt(path[Math.floor(currentSimIndex)].speed);
 
-          // HIZ AYARI: 127'yi 25'e scale ediyoruz (Yavaşlatma)
-          // Oran: 25 / 127
           let scaledSpeed = currentSpeed * (25 / 127);
-
-          // Adım büyüklüğü (Düşük hızlar için minimum 0.05 verdim ki durmasın)
           let step = Math.max(0.05, scaledSpeed / 40);
 
           currentSimIndex += step;
@@ -917,7 +919,7 @@
       function savePath() {
         let listToSave = isPointMode || isDrawing ? rawPoints : processedPoints;
         const data = {
-          version: "v25",
+          version: "v27",
           points: listToSave,
           settings: {
             isPointMode: isPointMode,
@@ -1222,7 +1224,7 @@
         if (selectedPointIndex !== -1) updateSelectionUI();
       }
 
-      // --- UI GÜNCELLEME ---
+      // --- UI GÜNCELLEME (AKILLI SLIDER) ---
       function updateSelectionUI() {
         if (selectedPointIndex !== -1) {
           noSelectionMsg.style.display = "none";
@@ -1257,15 +1259,35 @@
             pointDirInput.value = p.dir || "fwd";
           }
 
-          // KNOB GÜNCELLEME
+          // --- KNOB MANTIĞI GÜNCELLENDİ ---
+          let displayAngle = 0;
           if (p.customHeading !== null) {
-            angleInput.value = p.customHeading;
-            handleRotator.style.transform = `rotate(${p.customHeading}deg)`;
+            // Eğer özel açı varsa onu göster
+            displayAngle = p.customHeading;
+            angleInput.value = displayAngle;
           } else {
+            // Eğer yoksa (Oto), hesaplanan açıyı göster ama input boş kalsın
             angleInput.value = "";
             angleInput.placeholder = "Oto";
-            handleRotator.style.transform = `rotate(0deg)`;
+
+            // Otomatik açı hesabı (drawScreen'deki gibi)
+            if (list.length > 1) {
+              if (selectedPointIndex < list.length - 1) {
+                displayAngle = calculateRawHeading(
+                  p,
+                  list[selectedPointIndex + 1]
+                );
+              } else {
+                displayAngle = calculateRawHeading(
+                  list[selectedPointIndex - 1],
+                  p
+                );
+              }
+            }
           }
+          // Slider'ı döndür
+          handleRotator.style.transform = `rotate(${displayAngle}deg)`;
+          // --------------------------------
         } else {
           noSelectionMsg.style.display = "block";
           selectionControls.style.display = "none";
