--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VEX Path Planner - Pro Editor v30</title>
+
+    <link rel="icon" href="ibb_logo_favicon.jpg" type="image/jpeg" />
+
     <style>
       /* GENEL SAYFA DÜZENİ */
       body {
@@ -25,6 +28,17 @@
         margin: 10px 0 5px 0;
         font-size: 1.4rem;
         flex-shrink: 0;
+      }
+
+      /* 2. EKLEME: SAĞ ÜST LOGO STİLİ */
+      .top-right-logo {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        width: 60px; /* Logo boyutu */
+        height: auto;
+        z-index: 100;
+        border-radius: 5px; /* Hafif yuvarlak köşeler */
       }
 
       /* DOSYA MENÜSÜ */
@@ -493,6 +507,8 @@
     </style>
   </head>
   <body>
+    <img src="ibb_logo.jpg" alt="İBB Tech Logo" class="top-right-logo" />
+
     <div class="file-menu-container">
       <div class="dropdown">
         <button class="dropbtn">Dosya</button>
@@ -1447,6 +1463,7 @@
               name: "",
               speed: defaultSpeed,
               dir: "fwd",
+              dir: "fwd",
             });
 
             processedPoints = newPoints;
@@ -1832,7 +1849,7 @@
 
             // DÜZELTME: Virgül, veri bloğunun hemen yanına ekleniyor (yorumdan önce)
             if (i > 1) outputText += "\n";
-            outputText += "      " + lineData;
+            outputText += "      " + lineData;
 
             if (i < points.length - 1) {
               outputText += ",";
@@ -1845,7 +1862,7 @@
         }
 
         if (points.length === 1) {
-          outputText += "      // Hareket için daha fazla nokta ekleyin...\n";
+          outputText += "      // Hareket için daha fazla nokta ekleyin...\n";
         }
 
         outputText += "\n}, true);";
